--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babel-preset-es2015": "^6.24.1"
   },
   "scripts": {
-    "build": "babel src --out-dir lib"
+    "build": "babel src --out-dir lib",
+    "prepublish": "yarn build"
   },
   "files": [
     "lib",
